--- a/analysis/diff_expr_spatial_linear_models.Rmd
+++ b/analysis/diff_expr_spatial_linear_models.Rmd
@@ -8,19 +8,21 @@ editor_options:
   chunk_output_type: console
 ---
 
-Spatial transcriptomics (ST) assays represent a revolution in the way the architecture of tissues is studied, by allowing for the exploration of cells in their spatial context. A common element in the analysis is the delineation of tissue domains or “niches” followed by the detection of differentially expressed genes to infer the biological identity of the tissue domains or cell types. However, many studies approach differential expression analysis by using statistical approaches often applied in the analysis of non-spatial scRNA data (e.g., two-sample t-tests, Wilcoxon rank sum test), hence neglecting the spatial dependency observed in ST data. In this study, we show that applying linear mixed models with spatial correlation structures using spatial random effects effectively accounts for the spatial autocorrelation and reduces inflation of type-I error rate that is observed in non-spatial based differential expression testing. We also show that spatial linear models with an exponential correlation structure provide a better fit to the ST data as compared to non-spatial models, particularly for spatially resolved technologies that quantify expression at finer scales (i.e., single-cell resolution). 
+Spatial transcriptomics (ST) assays represent a revolution in the way the architecture of tissues is studied, by allowing for the exploration of cells in their spatial context. A common element in the analysis is the delineation of tissue domains or “niches” followed by the detection of differentially expressed genes to infer the biological identity of the tissue domains or cell types. However, many studies approach differential expression analysis by using statistical approaches often applied in the analysis of non-spatial scRNA data (e.g., two-sample t-tests, Wilcoxon rank sum test), hence neglecting the spatial dependency observed in ST data. In this study, we show that applying linear mixed models with spatial correlation structures using spatial random effects effectively accounts for the spatial autocorrelation and reduces inflation of type-I error rate that is observed in non-spatial based differential expression testing. We also show that spatial linear models with an exponential correlation structure provide a better fit to the ST data as compared to non-spatial models, particularly for spatially resolved technologies that quantify expression at finer scales (i.e., single-cell resolution).
 
-This workflow presents the code used to generate the results for the manuscript entitled "Differential gene expression analysis of spatial transcriptomic experiments using spatial mixed models". Some of the files used to generate these results are included in this repository. However, raw data and heavy files are not included. Those files can be generated again using the scripts in the `code` directory.
+This workflow presents the code used to generate the results for the manuscript entitled "Differential gene expression analysis of spatial transcriptomic experiments using spatial mixed models" ([pre-print available here](https://www.biorxiv.org/content/10.1101/2024.01.20.576348v1)). Some of the files used to generate these results are included in this repository. However, raw data and heavy files are not included. Those files can be generated again using the scripts in the `code` directory.
 
 The `spatialGE` software includes the `STdiff` function to test for differentially expressed genes using spatial covariance structures. In this paper, the `STdiff` function was not used. Instead, the script of the function was modified to enable execution of Slurm array jobs in a high performance computing (HPC) facility. Nonetheless, the algorithm used here and in `STdiff` are the same, and users are encouraged to run STdiff using the `spatialGE` software.
 
 Load `tidyverse` to handle the compiled STdiff results.
+
 ```{r load_libs}
 library('tidyverse')
 library('spatialGE')
 ```
 
 Differentially expressed genes were tested in a random set of genes from the glioblastoma (GBM) Visium data set (Ravi et al. 2022). In addition, the same data set was used to run a gene set enrichment analysis (GSEA) ranking a different selection of genes based on the models' p-values. Assessment of the power of spatial models was done only on the randomly selected genes, and those genes should be extracted from the results.
+
 ```{r read_hmk_genes}
 # Read randomly selected genes (to distinguish from Hallmark genes tested for GSEA)
 fp = 'code/diff_expr_hpcrun_spamm/data/visium_gene_meta_combo_raviglioblastoma.txt'
@@ -30,6 +32,7 @@ rm(fp) # Clean env
 ```
 
 Read the results from the non-spatial and spatial (STdiff) model tests. The table to be read in this section results from running the `compile_all_results.R` script, which reads the individual model values generated during the HPC run.
+
 ```{r read_model_res}
 # Read table containing statistics derived from all models.
 fp = 'code/diff_expr_hpcrun_spamm/code/spatial_test_all_compiled.csv'
@@ -55,6 +58,7 @@ col_pal = list(
 ```
 
 Identify genes with average expression (across spots/cells) higher or lower than the median expression value.
+
 ```{r calc_median}
 # Get average gene expression from STlist
 ## NOTE: This is done to separate high/low expression genes as it affects the power of spatial models
@@ -91,6 +95,7 @@ rm(fps) # Clean env
 ```
 
 Ascertain which model presented better fit to the data. The model selection was done based on the Akaike Information Criterion (AIC).
+
 ```{r compare_aic}
 # Define which model (non-spatial or spatial) is better based on AIC
 df_res_aic = df_res %>%
@@ -145,6 +150,7 @@ print(p)
 ```
 
 To assess the level of significant p-value inflation, the log10(p-value) of each alternative (spatial/non-spatial) is compared for each gene x cluster combination.
+
 ```{r compare_pval}
 # Find larger p-value
 df_lower_pval = df_res %>%
@@ -229,6 +235,7 @@ rm(ntests) # Clean env
 ```
 
 The utility of p-values extracted from the spatial models was compared with those resulting from the non-spatial models by running GSEA on each group of p-values. The p-values were used as ranking statistic for the fgsea algorithm. The script to run fgsea is named `gene_set_enrichment.R`.
+
 ```{r plot_gsea}
 # Read fGSEA results
 fgsea_res = readRDS('data/fgsea_results.RDS')
@@ -276,6 +283,7 @@ print(bp[['UKF243']])
 ```
 
 Now, the time taken for each model fitting to be completed is plotted. There is a relationship between the number of ROIs/spots/cells and the execution time of the model. During the HPC runs, the maximum allowed time for a model to be completed was 2 hours.
+
 ```{r plot_time}
 # Get number of spots per each sample
 geomx_brain = readRDS('code/diff_expr_hpcrun_spamm/data/geomx_stlist_w_clusters_soabrain.RDS')
@@ -318,4 +326,3 @@ cp = ggplot(df_cp, aes(x=model, y=log_exec_time)) +
 
 print(cp)
 ```
-
