--- a/analysis/diff_expr_spatial_linear_models.Rmd
+++ b/analysis/diff_expr_spatial_linear_models.Rmd
@@ -10,7 +10,7 @@ editor_options:
 
 Spatial transcriptomics (ST) assays represent a revolution in the way the architecture of tissues is studied, by allowing for the exploration of cells in their spatial context. A common element in the analysis is the delineation of tissue domains or “niches” followed by the detection of differentially expressed genes to infer the biological identity of the tissue domains or cell types. However, many studies approach differential expression analysis by using statistical approaches often applied in the analysis of non-spatial scRNA data (e.g., two-sample t-tests, Wilcoxon rank sum test), hence neglecting the spatial dependency observed in ST data. In this study, we show that applying linear mixed models with spatial correlation structures using spatial random effects effectively accounts for the spatial autocorrelation and reduces inflation of type-I error rate that is observed in non-spatial based differential expression testing. We also show that spatial linear models with an exponential correlation structure provide a better fit to the ST data as compared to non-spatial models, particularly for spatially resolved technologies that quantify expression at finer scales (i.e., single-cell resolution).
 
-This workflow presents the code used to generate the results for the manuscript entitled "Differential gene expression analysis of spatial transcriptomic experiments using spatial mixed models" ([pre-print available here](https://www.biorxiv.org/content/10.1101/2024.01.20.576348v1)). Some of the files used to generate these results are included in this repository. However, raw data and heavy files are not included. Those files can be generated again using the scripts in the `code` directory.
+This workflow presents the code used to generate the results for the manuscript entitled "Differential gene expression analysis of spatial transcriptomic experiments using spatial mixed models" ([Ospina et al. 2024](https://www.nature.com/articles/s41598-024-61758-0)). Some of the files used to generate these results are included in this repository. However, raw data and heavy files are not included. Those files can be generated again using the scripts in the `code` directory.
 
 The `spatialGE` software includes the `STdiff` function to test for differentially expressed genes using spatial covariance structures. In this paper, the `STdiff` function was not used. Instead, the script of the function was modified to enable execution of Slurm array jobs in a high performance computing (HPC) facility. Nonetheless, the algorithm used here and in `STdiff` are the same, and users are encouraged to run STdiff using the `spatialGE` software. An example to run `STdiff` is presented in the vignette ["Using the STdiff function from the spatialGE package"](https://fridleylab.github.io/diff_expression_spatial_linear_models/diff_expr_example_stdiff.html).
 
