--- a/analysis/about.Rmd
+++ b/analysis/about.Rmd
@@ -7,7 +7,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-This repository contains code to reproduce the figures in the manuscript entitled "Differential gene expression analysis of spatial transcriptomic experiments using spatial mixed models" ([pre-print available here](https://www.biorxiv.org/content/10.1101/2024.01.20.576348v1)). The contents of the repository are briefly detailed here:
+This repository contains code to reproduce the figures in the manuscript entitled "Differential gene expression analysis of spatial transcriptomic experiments using spatial mixed models" ([Ospina et al. 2024](https://www.nature.com/articles/s41598-024-61758-0)). The contents of the repository are briefly detailed here:
 
 -   `analysis/diff_expr_spatial_linear_models.Rmd`: Script to generate the figures presented in the manuscript.
 -   `code/prepare_data_hpcrun_*`: Scripts to create STlist (spatialGE object) and list of genes x cluster combinations to run STdiff in an HPC environment.
