--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -8,6 +8,6 @@ editor_options:
   chunk_output_type: console
 ---
 
-This repository contains code to reproduce the figures in the manuscript entitled "Differential gene expression analysis of spatial transcriptomic experiments using spatial mixed models" ([pre-print available here](https://www.biorxiv.org/content/10.1101/2024.01.20.576348v1)).
+This repository contains code to reproduce the figures in the manuscript entitled "Differential gene expression analysis of spatial transcriptomic experiments using spatial mixed models" ([published in Scientific Reports](https://www.nature.com/articles/s41598-024-61758-0)).
 
 Code presented in this website and used in pre-processing steps can be found [here](https://github.com/FridleyLab/diff_expression_spatial_linear_models).
